...
            )}
            ListEmptyComponent={<Text>No lotteries found</Text>}
          />
        </>
      )}
      <Fab
        accessibilityLabel="Add lottery"
        onPress={() => {
          navigation.navigate('AddLottery');
        }}
      >
        <Ionicons name="add" size={24} color="white" />
      </Fab>
...
